# mbox2sqlite-llm

./: .bumpversion.toml  .gitignore  CLAUDE.md  CLEANING_DESIGN.md  DB_DESIGN.md  README.md  RELEASE.md  RELEASE_INSTRUCTIONS.md  TODO.md  pyproject.toml  setup.py
.github/: WORKFLOWS.md
.github/workflows/: publish-test.yml  publish.yml  test.yml
mbox_to_sqlite/: clean.py  cli.py
scripts/: check-workflows.sh  release.sh
tests/: test_mbox_to_sqlite.py
