[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mbox2sqlite-llm"
version = "0.9.0"
description = "Load email from .mbox files into SQLite with Gmail support and LLM optimization"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache License, Version 2.0"}
authors = [
    {name = "Zack Shih"}
]
keywords = ["sqlite", "email", "mbox", "gmail", "llm", "datasette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click",
    "sqlite-utils",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.9.0",
    "quotequail>=0.2.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/imZack/mbox-to-sqlite"
Issues = "https://github.com/imZack/mbox-to-sqlite/issues"
Changelog = "https://github.com/imZack/mbox-to-sqlite/releases"

[project.scripts]
mbox2sqlite-llm = "mbox_to_sqlite.cli:cli"

[tool.setuptools]
packages = ["mbox_to_sqlite"]
